2. Reset da estilização e criação de componentes úteis

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="pt-BR">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Landing Page</title>
     <meta
       name="description"
@@ -12,6 +14,7 @@
       type="text/css"
       href="https://unpkg.com/@phosphor-icons/web@2.0.3/src/bold/style.css"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -34,22 +37,22 @@
 
         <img src="/assets/logo.png" />
 
-        <button>Buy now</button>
+        <button type="button" class="button button--small">Buy now</button>
       </div>
     </header>
 
     <main class="content">
       <div class="container-fluid">
         <h2>Introduce Your Product Quickly & Effectively</h2>
-        <span>
+        <p>
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
           commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
           et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
           felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
           consequat massa quis enim.
-        </span>
-        <button type="button">Purchase UI Kit</button>
-        <a href="#">Learn More</a>
+        </p>
+        <button type="button" class="button">Purchase UI Kit</button>
+        <a class="button button--secondary" href="#">Learn More</a>
       </div>
     </main>
 
@@ -57,7 +60,7 @@
       <div class="container">
         <div>
           <span>©2023 Yourcompany</span>
-          <button type="button">Purchase now</button>
+          <button type="button" class="button button--small">Purchase Now</button>
         </div>
 
         <div>
