3. Criação do content-fluid

--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
 
     <main class="content">
       <div class="container-fluid">
-        <h2>Introduce Your Product Quickly & Effectively</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-          commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
-          et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
-          felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
-          consequat massa quis enim.
-        </p>
-        <button type="button" class="button">Purchase UI Kit</button>
-        <a class="button button--secondary" href="#">Learn More</a>
+        <div>
+          <h2>Introduce Your Product Quickly & Effectively</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+            commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
+            et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
+            felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
+            consequat massa quis enim.
+          </p>
+          <button type="button" class="button">Purchase UI Kit</button>
+          <a class="button button--secondary" href="#">Learn More</a>
+        </div>
       </div>
     </main>
 
