4. Integração do footer estilizado da Carol

--- a/index.html
+++ b/index.html
@@ -1,116 +1,118 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <title>Landing Page</title>
-    <meta
-      name="description"
-      content="This is an example of a landing page that was a challenge"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://unpkg.com/@phosphor-icons/web@2.0.3/src/bold/style.css"
-    />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <header class="header">
-      <div class="container">
-        <nav>
-          <ul>
-            <li>
-              <a href="#home">Home</a>
-            </li>
-            <li>
-              <a href="#abut">Abut</a>
-            </li>
-            <li>
-              <a href="#contact">Contact</a>
-            </li>
-          </ul>
-        </nav>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <title>Landing Page</title>
+  <meta name="description" content="This is an example of a landing page that was a challenge" />
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.0.3/src/bold/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-        <img src="/assets/logo.png" />
+<body>
+  <header class="header">
+    <div class="container">
+      <nav>
+        <ul>
+          <li>
+            <a href="#home">Home</a>
+          </li>
+          <li>
+            <a href="#abut">Abut</a>
+          </li>
+          <li>
+            <a href="#contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
 
-        <button type="button" class="button button--small">Buy now</button>
+      <img src="/assets/logo.png" />
+
+      <button type="button" class="button button--small">Buy now</button>
+    </div>
+  </header>
+
+  <main class="content">
+    <div class="background">
+      <img src="/assets/background.png" alt="">
+    </div>
+
+    <div class="container-fluid">
+      <div class="introduction">
+        <h2>Introduce Your Product Quickly & Effectively</h2>
+        <p>
+          Descubra a elegância suprema deste sofá contemporâneo. Seu design sofisticado e conforto inigualável
+          tornam-no uma adição essencial para sua casa. Escolha a excelência, escolha nosso sofá.
+        </p>
+        <p>
+          Seu revestimento em veludo macio proporciona uma sensação acolhedora, enquanto o apoio lombar ajustável
+          garante relaxamento perfeito. Uma escolha inigualável.
+        </p>
+        <button type="button" class="button">Purchase UI Kit</button>
+        <a class="button button--secondary" href="#">Learn More</a>
       </div>
-    </header>
+    </div>
+  </main>
 
-    <main class="content">
-      <div class="container-fluid">
-        <div>
-          <h2>Introduce Your Product Quickly & Effectively</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-            commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
-            et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
-            felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
-            consequat massa quis enim.
-          </p>
-          <button type="button" class="button">Purchase UI Kit</button>
-          <a class="button button--secondary" href="#">Learn More</a>
-        </div>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-top">
+        <span>©2023 Yourcompany</span>
+        <button type="button" class="button button--small">Purchase Now</button>
       </div>
-    </main>
 
-    <footer class="footer">
-      <div class="container">
-        <div>
-          <span>©2023 Yourcompany</span>
-          <button type="button" class="button button--small">Purchase Now</button>
-        </div>
+      <hr />
 
-        <div>
-          <ul>
-            <li>
-              <a href="#home">Home</a>
-            </li>
-            <li>
-              <a href="#about">About</a>
-            </li>
-            <li>
-              <a href="#contact">Contact</a>
-            </li>
-          </ul>
+      <div class="footer-bottom">
+        <ul class="footer-nav">
+          <li>
+            <a href="#home">Home</a>
+          </li>
+          <li>
+            <a href="#about">About</a>
+          </li>
+          <li>
+            <a href="#contact">Contact</a>
+          </li>
+        </ul>
 
-          <ul>
-            <li>
-              <a href="https://facebook.com" target="_blank">
-                <img src="/assets/social/facebook.svg" alt="" />
-              </a>
-            </li>
+        <ul class="social-icons">
+          <li>
+            <a href="https://facebook.com" target="_blank">
+              <img src="/assets/social/facebook.svg" alt="" />
+            </a>
+          </li>
 
-            <li>
-              <a href="https://linkedin.com" target="_blank">
-                <img src="/assets/social/linkedin.svg" alt="" />
-              </a>
-            </li>
+          <li>
+            <a href="https://linkedin.com" target="_blank">
+              <img src="/assets/social/linkedin.svg" alt="" />
+            </a>
+          </li>
 
-            <li>
-              <a href="https://twitter.com" target="_blank">
-                <img src="/assets/social/twitter.svg" alt="" />
-              </a>
-            </li>
+          <li>
+            <a href="https://twitter.com" target="_blank">
+              <img src="/assets/social/twitter.svg" alt="" />
+            </a>
+          </li>
 
-            <li>
-              <a href="https://youtube.com" target="_blank">
-                <img src="/assets/social/youtube.svg" alt="" />
-              </a>
-            </li>
+          <li>
+            <a href="https://youtube.com" target="_blank">
+              <img src="/assets/social/youtube.svg" alt="" />
+            </a>
+          </li>
 
-            <li>
-              <a href="https://instagram.com" target="_blank">
-                <img src="/assets/social/instagram.svg" alt="" />
-              </a>
-            </li>
-          </ul>
-        </div>
+          <li>
+            <a href="https://instagram.com" target="_blank">
+              <img src="/assets/social/instagram.svg" alt="" />
+            </a>
+          </li>
+        </ul>
       </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
