fix: image box and remove border button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         </ul>
       </nav>
 
-      <img src="/assets/logo.png" />
+      <div>
+        <img src="/assets/logo.png" />
+      </div>
 
       <button type="button" class="button button--small">Buy now</button>
     </div>
