--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#home">Home</a>
           </li>
           <li>
-            <a href="#abut">Abut</a>
+            <a href="#about">About</a>
           </li>
           <li>
             <a href="#contact">Contact</a>
@@ -29,11 +29,11 @@
         </ul>
       </nav>
 
-      <div>
+      <div class="logo">
         <img src="/assets/logo.png" />
       </div>
 
-      <button type="button" class="button button--small">Buy now</button>
+      <button type="button" class="button button--small">Buy Now</button>
     </div>
   </header>
 
@@ -44,17 +44,21 @@
 
     <div class="container-fluid">
       <div class="introduction">
-        <h2>Introduce Your Product Quickly & Effectively</h2>
-        <p>
-          Descubra a elegância suprema deste sofá contemporâneo. Seu design sofisticado e conforto inigualável
-          tornam-no uma adição essencial para sua casa. Escolha a excelência, escolha nosso sofá.
-        </p>
-        <p>
-          Seu revestimento em veludo macio proporciona uma sensação acolhedora, enquanto o apoio lombar ajustável
-          garante relaxamento perfeito. Uma escolha inigualável.
-        </p>
+        <h1>Introduce Your Product Quickly & Effectively</h1>
+        <div>
+          <p>
+            Descubra a elegância suprema deste sofá contemporâneo. Seu design sofisticado e conforto inigualável
+            tornam-no uma adição essencial para sua casa. Escolha a excelência, escolha nosso sofá.
+          </p>
+          <p>
+            Seu revestimento em veludo macio proporciona uma sensação acolhedora, enquanto o apoio lombar ajustável
+            garante relaxamento perfeito. Uma escolha inigualável.
+          </p>
+        </div>
+       <div class="action">
         <button type="button" class="button">Purchase UI Kit</button>
         <a class="button button--secondary" href="#">Learn More</a>
+       </div>
       </div>
     </div>
   </main>
