--- a/index.html
+++ b/index.html
@@ -33,18 +33,24 @@
         <img src="/assets/logo.png" />
       </div>
 
-      <button type="button" class="button button--small">Buy Now</button>
+      <button type="button" class="buynow button button--small">Buy Now</button>
+
+      <button type="button" data-menu="open">
+        <img src="/assets/hamburger.svg" alt="" />
+      </button>
     </div>
   </header>
 
   <main class="content">
     <div class="background">
-      <img src="/assets/background.png" alt="">
+      <img class="desktop" src="/assets/background.png" alt="">
+      <img class="mobile" src="/assets/background-mobile.png" alt="">
     </div>
 
     <div class="container-fluid">
       <div class="introduction">
         <h1>Introduce Your Product Quickly & Effectively</h1>
+
         <div>
           <p>
             Descubra a elegância suprema deste sofá contemporâneo. Seu design sofisticado e conforto inigualável
@@ -55,10 +61,11 @@
             garante relaxamento perfeito. Uma escolha inigualável.
           </p>
         </div>
-       <div class="action">
-        <button type="button" class="button">Purchase UI Kit</button>
-        <a class="button button--secondary" href="#">Learn More</a>
-       </div>
+
+        <div class="action">
+          <button type="button" class="button">Purchase UI Kit</button>
+          <a class="button button--secondary" href="#">Learn More</a>
+        </div>
       </div>
     </div>
   </main>
